# Geosyntra

./: .env.example  .envrc  .gitignore  404.html  CNAME  Cargo.toml  DEVELOPER_SETUP.md  DataSource_Advanced_Layer_Technical_Docs.md  Dockerfile  EMAIL_AND_OAUTH_SETUP.md  Geosyntra.html  README.md  REPOSITORY.md  dev.cmd  docker-compose.ai.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  env.production.example  flake.nix  geosyntra-structures-data-entry.html  geosyntra.code-workspace  hostinger.secrets.env.example  index.html  manifest.webmanifest  oauth-return.html  package-lock.json  package.json  prepare-for-github.ps1  publish-to-github.ps1  push.cmd  start_background.vbs  start_system.bat
AgroCloud-GitHub-Ready/: .env.example  .gitignore  Dockerfile  README.md  db_migration.sql  docker-compose.yml  index.html  package-lock.json  package.json  test_stac.js  tsconfig.json  vite.config.ts
analysis_engine/: Dockerfile  README.md  requirements.txt
assets/: AdminAuditPage-B3-UKsCv.js  AdminAuditPage-BCoMVvpt.js  AdminAuditPage-BTyuw684.js  AdminAuditPage-BiTsSw7V.js  AdminAuditPage-Bp9cJcGU.js  AdminAuditPage-C2ElRl17.js  AdminAuditPage-C4y87mCi.js  AdminAuditPage-C9F0YUv7.js  AdminAuditPage-CBCHKwlJ.js  AdminAuditPage-CJcJVKCz.js  AdminAuditPage-CLWm5twx.js  AdminAuditPage-CfCjX0Tf.js  AdminAuditPage-CwmN_trJ.js  AdminAuditPage-CyU4NebU.js  AdminAuditPage-DCB8J3T6.js  AdminAuditPage-DEvceHbc.js  AdminAuditPage-DR5G4TcO.js  AdminAuditPage-DSkb9wTA.js  AdminAuditPage-Dgw2Ztbu.js  AdminAuditPage-DzFNuQuJ.js  AdminAuditPage-OdMuWeSL.js  (+19897 more)
(+1724 files in other folders)
