[workspace]
members = [
    "packages/domain",
    "packages/application",
    "packages/infrastructure",
    "packages/interface",
    "packages/api",
    "packages/web",
]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
